apps/docker/postgres/codecorner-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: codecorner-deployment
  namespace: balhau-dev
  labels:
    version: v9
    app: codecorner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codecorner
  template:
    metadata:
      labels:
        app: codecorner
    spec:
      containers:
      - name: codecorner
        image: 10.108.252.69:5000/balhau/codecorner:v9
        volumeMounts:
        - name: codecorner-store
          mountPath: /opt/ghost
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
      volumes:
      - name: codecorner-store
        persistentVolumeClaim:
          claimName: codecorner-pvc
